# whathappened

./: CHANGELOG.md  README.md  example.py  pyproject.toml
tests/: test_changelog.py
whathappened/: changelog.py  command_line.py
