[tool.poetry]
name = "whathappened"
version = "1.0.0"
description = "A changelog generator using simply structured git commit messages."
authors = ["Rollcloud <rollcloud@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.11.1"
pytest-reportlog = "^0.1.2"
pytest-watch = "^4.2.0"
versioneer = "^0.19"
black = "^20.8b1"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
